stderr
HikerTest.java:13: error: cannot find symbol
        List<String> actual = Hiker.answer().split("\n");
        ^
  symbol:   class List
  location: class HikerTest
HikerTest.java:13: error: int cannot be dereferenced
        List<String> actual = Hiker.answer().split("\n");
                                            ^
HikerTest.java:24: error: int cannot be dereferenced
                assertEquals(currentNumber.toString(), actual[i]);
                                          ^
3 errors
